# deep-financial-research

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt
.claude/skills/code-review/: SKILL.md
.claude/skills/git-workflow/: SKILL.md
scripts/: generate_sp500_aliases.py  index.py  ingest_sec.py
src/: app.py  main.py
src/components/: auth.py  chat.py  header.py
src/graph/: blueprint.py  state.py
src/nodes/: clarify.py  extractor.py  reply.py  search.py  supervisor.py
src/services/: rate_limit.py
src/utils/: config.py  logging.py  sp500.py
