[project]
name = "deep-financial-research"
version = "0.1.0"
dependencies = [
    "edgartools",
    "pydantic-settings",
    "langchain",
    "langchain-openai",        
    "langchain-community",     
    "chromadb",                
    "flashrank",               
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]